Fixed default cover bgcolor and loader alignment

--- a/src/App.scss
+++ b/src/App.scss
@@ -28,6 +28,7 @@ body > * {
   min-height: 100vh;
 
   main {
+    min-height: 30vh;
     display: flex;
     flex-direction: column;
     align-items: center;
