--- a/src/Components/Loader/Loader.module.scss
+++ b/src/Components/Loader/Loader.module.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   height: inherit;
+  margin: auto;
 
   .icon {
     margin-right: 0.5em;
